shifted propogation section to be a transition section to guided participation

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -122,7 +122,91 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
 
 This chapter begins with re-examining of game play design patterns as a unit of analysis for this research. Following this a vignette of parent child interaction in game making process helps contextualise findings. The chapter then undertakes a systematic analysis of varied uses of game design patterns by participants drawing on detailed observations of practice in recorded video data. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part of this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to educational designers and researchers.
-
+-   [The Use of Gameplay Design Patterns "It's like a project in itself,
+    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
+    -   [Research Questions - March
+        2024](#research-questions---march-2024)
+    -   [Chapter outline](#chapter-outline)
+    -   [Study of Vignette 2](#study-of-vignette-2)
+        -   [Descriptive Commentary on Vignette
+            2](#descriptive-commentary-on-vignette-2)
+    -   [Cultural Dimension](#cultural-dimension)
+        -   [The role of GDPs to facilitate learners to design for
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+        -   [GDP concepts and language used in informal feedback for
+            peers to influence modification of games (developing
+            community norms) - MERGE WITH
+            BELOW?](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms---merge-with-below)
+        -   [Evolution and propagation of GDPs concepts during
+            playtesting - MERGE WITH
+            ABOVE?](#evolution-and-propagation-of-gdps-concepts-during-playtesting---merge-with-above)
+        -   [GDPs facilitate the use of wider funds of knowledge /
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
+        -   [Perhaps add here a summary of cultural section if
+            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
+    -   [GDPs used in the process of guided
+        participation](#gdps-used-in-the-process-of-guided-participation)
+        -   [GDPs and their grouping as a collection or menu of
+            suggested options, offer the potential to assist project
+            navigation, acting as a framework for code examples and
+            step-by-step
+            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+        -   [GDPs used to scaffold ideation
+            processes](#gdps-used-to-scaffold-ideation-processes)
+            -   [Knowledge of game design patterns used to stimulate and
+                communicate new
+                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
+            -   [The use of GDPs to encourage intuitive and visual
+                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
+            -   [GDPs as used by participants in their prioritisation in
+                the ideation
+                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
+        -   [GDPs aiding the process of division of
+            labour](#gdps-aiding-the-process-of-division-of-labour)
+            -   [Working knowledge of different types of GDPs can help
+                participants to divide project elements by
+                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
+            -   [Structuring work processes through implementing modular
+                sub-projects in the form of GDPs can aid division of
+                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
+            -   [Other notable observations concerning division of
+                labour in the video
+                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
+        -   [The role of GDP used in emerging technical
+            processes](#the-role-of-gdp-used-in-emerging-technical-processes)
+            -   [Use of GDPs to facilitate use of
+                tools](#use-of-gdps-to-facilitate-use-of-tools)
+            -   [Diverse use of technical processes driven by
+                GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
+            -   [Use of GDPs in the development of shared
+                language](#use-of-gdps-in-the-development-of-shared-language)
+            -   [Code Patching as a guided
+                process](#code-patching-as-a-guided-process)
+            -   [GDPs used to nurture tactical responses to coding
+                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
+            -   [Concluding remarks on debugging and
+                revision](#concluding-remarks-on-debugging-and-revision)
+    -   [The role of GDPs in the personal appropriation of concepts and
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+    -   [Discussion](#discussion)
+        -   [Concrete and relatable levels of abstraction - linking this
+            communities experiences with existing
+            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
+        -   [Design patterns as a intermediate-level, pedagogical
+            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
+        -   [Implications and beginnings of suggestions for
+            practitioners - IS THIS FOR THE CONCLUSION? OR MERGE SOME
+            UP - WITHIN THE SECTION THAT THEY REFER
+            TO?](#implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to)
+            -   [Tensions between facilitating agency and norming
+                practices - MOVE up OR COMPRESS INTO THIS CHAPTER - OR
+                AS A LINK TO NEXT CHAPTER IN CONCLUSION
+                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion)
+    -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Simple table of uses](#simple-table-of-uses)
+        -   [Summary of the pedagogical opportunities of Game Design
+            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
+        -   [Transition to next chapter](#transition-to-next-chapter)
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 
@@ -411,71 +495,6 @@ These norming behaviours some of the informal norming behaviours that are less d
 MOVED Molly's challenge feedback TO AN APPENDIX
 
 
-### Evolution and propagation of GDPs concepts during playtesting
-
-<!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
-<!-- NOTE THIS includes NON TEMPLATED GDPs? -->
-
-**The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
-
-GDPs acted as memes and spread during playtesting in a way which enriched the idioculture and the games of participants.
-
-In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also   used GDP concepts to request help of peers to implement GDPs in their own games.
-
-For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Toby, agreeing to show another child Bertie  how to add new levels.
-
-    Bertie: Why’s that enemy in every level
-    Toby: He’s not.
-    Bertie: Can you show me how you add more levels on to yours?
-    Toby: Yeah sure.
-    Pause
-    Toby: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
-    Pause
-    Bertie: It’s like parkours in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?
-    Toby: Er not really.
-    Bertie: Or seen it?
-    Bertie: That’s like my second level.
-    Toby: Ah so hard (Toby fails at a high level on his game and starts to move off)
-    Toby: (To someone else  calling for attention)  No I’m helping Bertie.
-    _(Toby then follows Bertie to his workstation to help him implement more levels.)_
-
-When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Toby.
-
-Exchanges like this show the propagation of GDPs in ways other than documentation or facilitator support. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is possible that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to ask him to do the same. Toby has become a specialist that the community can draw on [see similar research]. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
-ADD MORE EVIDENCE?
-
-In addition to GDPs propagating, practices associated with GDPs propagated too (cropping tool in appendix Ed).
-
-<!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
-
-    Ed: How much jump speed to you have?
-    Ed: Your jump speed is massive.
-    Ed gives advice about tidying up the sprite outlines.
-    Ed: for people with background like yours You can use the “cramping tool””
-    Mark  and Ed then explain – SEE THEIR RECORDING
-    So that the background is clearer.
-
-While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
-
-
-<!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
-
-ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2.
-eg.
-
-Analysis of the working patterns stream of the coding schema shows 4 working units relying on peer sharing, 4 on facilitator and resource help and 2 only mostly self-driven in both identification and implementation.
-
-**New GDPs emerged from existing patterns through peer activity during playtesting**
-
-In addition to the propagation of GDPs offered n the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, the concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
-DEVELOP
-
-These new patterns or elements of patterns sometime introduced new concepts and associated language into the community. When participants noticed the elements and used the relevant terminology, they are engaging in what Wegner terms legitimate peripheral participation.
-
-While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
-
-
-
 
 ### GDPs facilitate the use of wider funds of knowledge / interest
 
@@ -527,6 +546,77 @@ ADD IF RELEVANT - research on funds of knowledge motives or benefits of this beh
 <!--
 Article on intangibility of game feel.
  https://www.gamedeveloper.com/design/game-feel-the-secret-ingredient -->
+
+
+### Evolution and propagation of GDPs concepts during playtesting
+
+
+
+<!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
+<!-- NOTE THIS includes NON TEMPLATED GDPs? -->
+
+**The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
+
+GDPs acted as memes and spread during playtesting in a way which enriched the idioculture and the games of participants.
+
+While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implentation of GDPs.  
+
+In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also   used GDP concepts to request help of peers to implement GDPs in their own games.
+
+For example, the work of the child to add 21 levels to their own game served as a way to publicise this possibility. The process was also spread by that child's willingness to help others to add that feature to their game. This shifted dependence on myself as a facilitator, or on the instruction-based support documents. This excerpt shows this more experience child coder Toby, agreeing to show another child Bertie  how to add new levels.
+
+   Bertie: Why’s that enemy in every level
+   Toby: He’s not.
+   Bertie: Can you show me how you add more levels on to yours?
+   Toby: Yeah sure.
+   Pause
+   Toby: I’m just going to have one go of beating this (refering to his own game which he is playtesing). It’s 21 levels in it. So .. Yeeeeah.
+   Pause
+   Bertie: It’s like parkours in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?
+   Toby: Er not really.
+   Bertie: Or seen it?
+   Bertie: That’s like my second level.
+   Toby: Ah so hard (Toby fails at a high level on his game and starts to move off)
+   Toby: (To someone else  calling for attention)  No I’m helping Bertie.
+   _(Toby then follows Bertie to his workstation to help him implement more levels.)_
+
+When Toby moves to Bertie's game he playtests it and then looks at the code. He notes that Bertie has added a variable for a fourth level but then goes on to demonstrate to to add an array representing the next level, and a conditional statement to select level 4 when level 3 is completed. At Toby uses the keyboard completes this work, Bertie reads aloud the code which is being typed in by Toby.
+
+Exchanges like this show the propagation of GDPs in ways other than documentation or facilitator support. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is possible that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to ask him to do the same. Toby has become a specialist that the community can draw on [see similar research]. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+ADD MORE EVIDENCE?
+
+In addition to GDPs propagating, practices associated with GDPs propagated too (cropping tool in appendix Ed).
+
+<!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
+
+   Ed: How much jump speed to you have?
+   Ed: Your jump speed is massive.
+   Ed gives advice about tidying up the sprite outlines.
+   Ed: for people with background like yours You can use the “cramping tool””
+   Mark  and Ed then explain – SEE THEIR RECORDING
+   So that the background is clearer.
+
+While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
+
+
+<!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
+
+ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2.
+eg.
+
+Analysis of the working patterns stream of the coding schema shows 4 working units relying on peer sharing, 4 on facilitator and resource help and 2 only mostly self-driven in both identification and implementation.
+
+**New GDPs emerged from existing patterns through peer activity during playtesting**
+
+In addition to the propagation of GDPs offered n the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, the concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
+DEVELOP
+
+These new patterns or elements of patterns sometime introduced new concepts and associated language into the community. When participants noticed the elements and used the relevant terminology, they are engaging in what Wegner terms legitimate peripheral participation.
+
+While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
+
+
+
 
 
 ### Perhaps  add here a summary of cultural section if useful
